WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180954
ExtendableMessageEvent constructor fails to initialize the 'source' attribute
https://bugs.webkit.org/show_bug.cgi?id=180954
Summary
ExtendableMessageEvent constructor fails to initialize the 'source' attribute
Chris Dumez
Reported
2017-12-18 15:54:47 PST
ExtendableMessageEvent constructor fails to initialize the 'source' attribute.
Attachments
Patch
(3.64 KB, patch)
2017-12-18 15:55 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-12-18 15:55:40 PST
Created
attachment 329697
[details]
Patch
WebKit Commit Bot
Comment 2
2017-12-18 16:28:47 PST
Comment on
attachment 329697
[details]
Patch Clearing flags on attachment: 329697 Committed
r226086
: <
https://trac.webkit.org/changeset/226086
>
WebKit Commit Bot
Comment 3
2017-12-18 16:28:49 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-12-18 16:29:22 PST
<
rdar://problem/36119588
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug