ExtendableMessageEvent constructor fails to initialize the 'source' attribute https://bugs.webkit.org/show_bug.cgi?id=180954

Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

Rebaseline WPT test now that more checks are passing.

* web-platform-tests/service-workers/service-worker/ServiceWorkerGlobalScope/extendable-message-event-constructor.https-expected.txt:

Source/WebCore:

No new tests, rebaselined existing test.

* workers/service/ExtendableMessageEvent.cpp:
(WebCore::ExtendableMessageEvent::ExtendableMessageEvent):


Canonical link: https://commits.webkit.org/196846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226086 268f45cc-cd09-0410-ab3c-d52691b4dbfc